<resources>

    <!-- Wizard User -->
    <string name="intro1">O usuário seleciona a loja e já pode ir adicionando os produtos no carrinho e ao final paga pelo próprio aplicativo</string>
    <string name="intro2">No horário agendado, o usuário se dirige até a loja desejada para pegar a sua compra que estará pronto para ser entregue</string>
    <string name="intro3">Já na loja selecionada, no lugar designado para a coleta, um funcionário lhe trará a sua compra</string>
    <string name="intro1_title">Crie sua lista de compra</string>
    <string name="intro2_title">Ir até a loja</string>
    <string name="intro3_title">Pegar a compra</string>

    <!--User -->
    <string name="app_user">Aplicativo do Usuário</string>
    <string name="photo_edit">Editar foto</string>
    <string name="name">Nome Completo</string>
    <string name="email">Email</string>
    <string name="phone">Telefone</string>
    <string name="wait_shopper_buy">Aguarde, o shopper já está fazendo sua compra.</string>
    <string name="wait_user_to_get">Shopper está lhe aguardando para entregar a sua compra.</string>
    <string name="instructions">Instruções</string>
    <string name="route">Rota</string>
    <string name="date_time_get_product">Pegue seus produtos antes de 00:00 do dia 4 de Outubro de 2016</string>
    <string name="locker">Locker 05 - Código 239892</string>
    <string name="open_until">Aberta até as 00:00</string>
    <string name="rating_shopper">Classificar shopper</string>
    <string name="description">Descrição</string>
    <string name="price">R$ 0.00</string>
    <string name="discount_price">R$ 4.00</string>
    <string name="manage_credit_card">Gerenciar cartões</string>
    <string name="add_credit_card">Adicionar cartões</string>
    <string name="account">Sua conta</string>
    <string name="register_account">Precisamos de alguns dados</string>
    <string name="login_create_user">Não tem uma conta? Se cadastre</string>
    <string name="hint_email">Email</string>
    <string name="hint_number">Número de telefone</string>
    <string name="hint_name">Nome</string>
    <string name="hint_password">Senha</string>
    <string name="select_image">Selecione uma imagem</string>
    <string name="change_image">Alterar sua foto</string>
    <string name="discount">Ver encartes com ofertas</string>
    <string name="no_product">Sem nenhum produto nesta categoria</string>
    <string name="no_credit_card">Sem nenhum cartão de crédito cadastrado</string>

    <!--Shopper -->
    <string name="register_account_shopper">Precisamos de alguns dados</string>
    <string name="login_create_shopper">Não tem uma conta de shopper? Se cadastre</string>
    <string name="hint_access_code">Digite seu código de acesso</string>
    <string name="hint_access_email">Digite seu email</string>
    <string name="app_shopper">Aplicativo do Shopper</string>
    <string name="user">Usuário</string>
    <string name="shopper">Shopper</string>
    <string name="or">OU</string>
    <string name="choose_profile">Por favor escolha qual é o seu perfil do pagpeg</string>
    <string name="store">Loja</string>
    <string name="distance">0.0 km</string>
    <string name="qty_order">0 pedido</string>
    <string name="qty_items_order">0 itens (0 unidades)</string>
    <string name="your_actual_rating">Sua avaliação atual</string>
    <string name="total_order">00 \n Total de \npedidos</string>
    <string name="order_rating">00 \n Pedidos \navaliados</string>
    <string name="five_rating">00 \n 5 estrelas</string>
    <string name="see_all">Ver todos...</string>
    <string name="last_comment">Último comentário:</string>
    <string name="size_product">Tamanho ou peso</string>
    <string name="department">Departamento</string>
    <string name="unit_qty">0x</string>

    <!-- Buttons -->
    <string name="save">Salvar</string>
    <string name="confirm">Confirmar</string>
    <string name="not_see_orders">Não aceitar pedido</string>
    <string name="see_orders">Ver o pedido</string>
    <string name="ok_confirm_shopper">OK, pode comprar</string>
    <string name="ok_summary">OK, tudo certo.Finalizar!</string>
    <string name="get_my_products">Peguei meus produtos</string>
    <string name="buyed">Compra finalizada</string>
    <string name="call">Ligar</string>
    <string name="add_cart">Adicionar no carrinho</string>
    <string name="remove_cart">Remover do carrinho</string>
    <string name="has_the_product">Contêm produto</string>
    <string name="has_not_the_product">Não contêm produto</string>
    <string name="edit">Editar</string>
    <string name="apply_discount">Aplicar desconto</string>
    <string name="buy">Comprar agora</string>
    <string name="found">Pronto,achei!</string>
    <string name="login">Login</string>
    <string name="facebook">Login com facebook</string>
    <string name="do_login">Fazer login ou me cadastrar</string>
    <string name="register">Cadastrar</string>

    <!-- Errors -->
    <string name="create_user_error">Erro ao se cadastrar o usuário , tente novamente mais tarde.</string>
    <string name="error_user_not_exist">Usuário não existe no pagpeg.</string>
    <string name="error_wrong_email_pass">Email e/ou senha incorreta, tente novamente.</string>

     <!-- Static -->
     <string name="desc_product_test">teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste teste</string>
    <string name="undo">Desfazer</string>

    <!-- Faceboook -->
    <string name="facebook_app_id">1826098607653297</string>

</resources>

