<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:layout_gravity="top|left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_shopper"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/textView2"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_access_email"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_access_code"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@drawable/round_button"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_create_shopper"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16dp"
            android:id="@+id/createShopper"
            android:padding="20dp"/>

    </LinearLayout>

</LinearLayout>