<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="v12.0"
            android:textColor="@color/white"
            android:gravity="right|center_vertical"
            android:textSize="12dp"
            android:paddingRight="6dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_profile"
            android:textColor="@color/white"
            android:padding="16dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnShopper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopper"
            android:background="@drawable/round_button"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:padding="16dp"/>

        <Button
            android:id="@+id/btnUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:background="@drawable/round_button"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>