<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:textSize="14sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            fontPath="fonts/Nexa-Bold.ttf"
            tools:ignore="MissingPrefix"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginBottom="20dp">

        <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/store_map"
            android:layout_width="80dp"
            android:layout_height="80dp"
            map:cameraZoom="10"
            map:mapType="normal"
            map:liteMode="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/store_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="Roldão"
                        android:gravity="start"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/store_km"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/distance"
                        android:gravity="end"
                        fontPath="fonts/Nexa-Bold.ttf"
                        tools:ignore="MissingPrefix"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/store_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Av. Fernão Dias Paes Leme, 391 - Centro - Várzea Pta"
                    android:textSize="12sp"
                    android:gravity="start"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/qty_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/qty_order"
        android:gravity="center"
        android:textColor="@android:color/black"
        fontPath="fonts/Nexa-Bold.ttf"
        tools:ignore="MissingPrefix"/>

    <TextView
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/qty_items_order"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="14sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            fontPath="fonts/Nexa-Bold.ttf"
            tools:ignore="MissingPrefix"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/image_user_blue"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:layout_gravity="center"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aline Ornelas"
            android:textSize="16sp"
            android:padding="4dp"
            fontPath="fonts/Nexa-Bold.ttf"
            tools:ignore="MissingPrefix"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="4dp">

                <TextView
                    android:id="@+id/user_number"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="(61) 991189994"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/call"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="20dp"
                    android:text="@string/call"
                    android:textSize="10sp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

   </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAddCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/see_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_orders"
                android:textSize="12sp"
                android:padding="8dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>