<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="150dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_user"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:layout_gravity="center|top"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wait_user_to_get"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:padding="16dp"
            android:textSize="14sp"
            fontPath="fonts/Nexa-Bold.ttf"
            tools:ignore="MissingPrefix"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                map:cameraZoom="10"
                map:mapType="normal"
                map:liteMode="true"/>

            <Button
                android:id="@+id/picked_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_my_products"
                android:textSize="12sp"
                android:padding="8dp"
                android:background="@color/green_button"
                android:textColor="@android:color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:gravity="center"
                    android:padding="12dp"
                    android:textSize="15dp"
                    android:background="@color/white"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/textView"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/route"
                    android:gravity="center"
                    android:padding="12dp"
                    android:textSize="15dp"
                    android:background="@color/white"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <fragment
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:id="@+id/miniMap"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    map:cameraZoom="10"
                    map:mapType="normal"
                    map:liteMode="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:text="Roldão"
                                android:gravity="start"
                                android:textAlignment="viewStart"
                                android:textColor="@android:color/black"/>

                            <TextView
                                android:id="@+id/km"
                                android:layout_width="0dp"
                                android:layout_weight="0.5"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:text="@string/distance"
                                android:gravity="end"
                                fontPath="fonts/Nexa-Bold.ttf"
                                tools:ignore="MissingPrefix"/>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Av. Fernão Dias Paes Leme, 391 - Centro - Várzea Pta"
                            android:textSize="12sp"
                            android:gravity="start"/>

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/open_until"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="normal|bold"
                            android:layout_gravity="left"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_time_get_product"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>