<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/logoStore"
        android:src="@drawable/produto_img"
        tools:ignore="ContentDescription"
        android:scaleType="fitXY"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/unit_qty"
                android:gravity="center"
                android:textSize="20sp"
                fontPath="fonts/Nexa-Bold.ttf"
                tools:ignore="MissingPrefix"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Cerveja Skol 18 latinhas"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"/>

        </LinearLayout>

         <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

            <TextView
            android:id="@+id/promo"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/discount_price"
            android:textSize="12sp"
            android:background="@drawable/line"
            android:gravity="center"/>

            <TextView
             android:id="@+id/price"
             android:layout_width="0dp"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:text="@string/price"
             android:gravity="center|left"
             android:textSize="12sp"
             fontPath="fonts/Nexa-Bold.ttf"
             tools:ignore="MissingPrefix"
             android:textColor="@color/colorPrimary"/>

             <TextView
               android:id="@+id/status"
               android:layout_width="0dp"
               android:layout_weight="0.5"
               android:layout_height="wrap_content"
               android:text="Achou"
               android:gravity="center"
               android:textSize="12sp"
               android:textColor="@color/white"
               android:background="@android:color/holo_green_dark"/>

         </LinearLayout>

      </LinearLayout>

    </LinearLayout>

</LinearLayout>
